<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Olivia</string>
    <string name="target">Target</string>
    <string name="select_file_title">Select map file</string>
    <string name="invalid_map_file">Map file not valid</string>
    <string name="error_message">Error message</string>
    <string name="north_prefix">N</string>
    <string name="south_prefix">S</string>
    <string name="east_prefix">E</string>
    <string name="west_prefix">W</string>
    <string name="number_wrong">Number wrong</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="define_target">Define target</string>
    <string name="select_map">Select map</string>
    <string name="map">Map</string>
    <string name="change_settings">Change settings</string>
    <string name="settings">Settings</string>
    <string name="select_map_file">Select map file</string>
    <string name="gps_timeout">GPS Timeout</string>
    <string name="gps_timeout_explain">GPS deactivated when screen is locked</string>
    <string name="settings_title">Settings</string>
    <string name="sound_first_fix">Signal first fix</string>
    <string name="sound_first_fix_explain">Play sound on first GPS fix</string><string name="battery_save">Battery GPS</string>
    
    <string name="battery_save_explain">Battery percentage for GPS off</string>
    <string name="target_number">Target number</string>
    <string name="homing">Center position is</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="center_taken">Map center used</string>
    <string name="position_taken">Current position used</string>
    <string name="invalid_map_view">Map view cannot be created</string>
    <string name="add">Add</string>
</resources>
