<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="#fff">
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingTop="2dp">
        <Button android:id="@+id/targetOk" android:layout_width="wrap_content" android:maxWidth="100dp" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1"></Button>
        <Button android:id="@+id/targetCancel" android:layout_width="wrap_content" android:maxWidth="60dp" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1"></Button>
    </LinearLayout>
    <View android:background="@color/grey02" android:layout_width="fill_parent" android:layout_height="1dp" android:layout_marginBottom="5dp"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/BwText" android:text="@string/target_number"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" android:gravity="center_vertical"/>

        <Spinner
            android:id="@+id/targetNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:entries="@array/targetNumberEntries"/>

    </LinearLayout>

    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="fill_parent">
        <TextView style="@style/BwText" android:text="@string/latitude"></TextView>
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="fill_parent">
            <Button android:layout_height="wrap_content" android:id="@+id/northIndicator" android:text="N" android:layout_marginRight="5dp" android:layout_width="50dp"></Button>
            <EditText android:layout_height="wrap_content" android:inputType="phone" android:layout_width="50dp" android:id="@+id/targetLatitude1" android:gravity="right|center_vertical">
            	<requestFocus></requestFocus>            
            </EditText>
            <TextView android:text="°" style="@style/BwText.Mark"></TextView>
            <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="phone" android:id="@+id/targetLatitude2"></EditText>
            <TextView android:text='"' style="@style/BwText.Mark"></TextView>

            <Button
                android:id="@+id/copyCenter"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="C" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:layout_width="fill_parent" android:paddingTop="5dp">
        <TextView style="@style/BwText" android:text="@string/longitude"></TextView>
        <LinearLayout android:layout_height="wrap_content" android:id="@+id/LinearLayout01" android:layout_width="fill_parent">
            <Button android:layout_height="wrap_content" android:text="E" android:id="@+id/eastIndicator" android:layout_marginRight="5dp" android:layout_width="50dp"></Button>
            <EditText android:id="@+id/targetLongitude1" android:layout_height="wrap_content" android:layout_width="50dp" android:inputType="phone" android:gravity="right|center_vertical"></EditText>
            <TextView android:text="°" style="@style/BwText.Mark"></TextView>
            <EditText android:layout_weight="1" android:id="@+id/targetLongitude2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="phone"></EditText>
            <TextView android:text='"' style="@style/BwText.Mark"></TextView>

            <Button
                android:id="@+id/copyPosition"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="P" />

        </LinearLayout>
    </LinearLayout>
    
    <View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@color/grey02" android:layout_marginTop="5dp"/>
        
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout5" android:layout_width="fill_parent" android:paddingTop="10dp">
        <EditText android:inputType="phone" android:gravity="right|center_vertical" android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="70dp" android:id="@+id/grades"></EditText>
        <TextView android:layout_weight="1" android:text="°" style="@style/BwText.Mark"></TextView>
        <EditText android:inputType="phone" android:layout_height="wrap_content" android:id="@+id/meters" android:layout_width="wrap_content" android:layout_weight="2"></EditText>
        <TextView android:layout_weight="1" style="@style/BwText.Mark" android:text="m"></TextView>
        <Button android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/doBearing" android:text="@string/add" android:layout_width="wrap_content"></Button>
    </LinearLayout>
  
</LinearLayout>
